// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxTypes should have specific type properties: all redux types 1`] = `
Object {
  "appTypes": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "default": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "platform": Object {
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "rhsm": Object {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
      "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
    },
    "user": Object {
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "platformTypes": Object {
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "reduxTypes": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "platform": Object {
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "rhsm": Object {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
      "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
    },
    "user": Object {
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "rhsmTypes": Object {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
    "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
  },
  "userTypes": Object {
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;

exports[`ReduxTypes should have specific type properties: specific types 1`] = `
Object {
  "app": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "platform": Object {
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "rhsm": Object {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
    "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
  },
  "user": Object {
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;
